--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
     "googleapis": "^67.0.0",
+    "jsdom": "^16.4.0",
     "qs": "^6.9.6",
     "tiktok-api": "^0.4.1",
     "webpack": "^4.44.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
+    "copy-webpack-plugin": "^7.0.0",
     "nodemon": "^1.19.4",
     "ts-loader": "^8.0.13",
     "typescript": "^4.1.3",
