--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
-    "module": "ES2020",
-    "target": "ES2020",
+    "target": "es2018",
+    "module": "commonjs",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "outDir": "dist",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"]
 }
